Fixed nested ul spacing

--- a/resources/components/common.less
+++ b/resources/components/common.less
@@ -257,7 +257,7 @@ a {
 
     #contentSub,
     #contentSub2 {
-    	color: @base-30;
+        color: @base-30;
         font-size: @content-caption-size;
     }
 
@@ -533,6 +533,10 @@ a {
 
     ul {
         margin: 0.8rem 0 0 1.6rem;
+
+        ul {
+            margin: 0 0 0 1.6rem;
+        }
     }
 
     dl,
@@ -969,7 +973,7 @@ a {
     div.tleft,
     div.floatleft,
     table.floatleft {
-        margin-left: @negative-margin !important;
+        margin-left: @negative-margin  !important;
     }
 
     div.tnone,
@@ -978,7 +982,7 @@ a {
     div.tright,
     div.floatright,
     table.floatright {
-        margin-right: @negative-margin !important;
+        margin-right: @negative-margin  !important;
     }
 }
 
